--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   "author": "engin.a@myplanet.com",
   "license": "ISC",
   "devDependencies": {
-    "babelify": "^6.1.3",
+    "babelify": "^7.3.0",
     "browser-sync": "^2.11.1",
     "browserify": "^13.0.0",
     "del": "^2.2.0",
+    "glob": "^7.0.3",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-changed": "^1.3.0",
@@ -26,8 +27,10 @@
     "gulp-sequence": "^0.4.4",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
+    "main-bower-files": "^2.13.0",
     "require-dir": "^0.3.0",
     "require-glob": "^1.3.2",
+    "sass-module-importer": "^1.2.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   }
