--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "jquery": ">=1.12.3"
+    "jquery": ">=1.12.3",
+    "normalize-css": ">=4.1.1"
   }
 }
